manifests/immich/templates/server/ingress.yaml
---
# Source: immich/templates/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  labels:
    helm.sh/chart: immich-1.0.0
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: immich
    app.kubernetes.io/version: "v1.113.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - "photo.mukka.haus"
      secretName: immich-tls
  rules:
    - host: "photo.mukka.haus"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich
                port:
                  number: 8080
